--- a/index.html
+++ b/index.html
@@ -29,18 +29,68 @@
         </div>
     </div>
 </div>
-<!--
-<div class="ui container">
-    <div class="ui fixed top five item menu borderless fitted" id="navbar">
-        <a class="fitted item" #href="Men">Men</a>
-        <a class="fitted item" #href="Women">Women</a>
-        <a class="fitted item" #href="Kids">Kids</a>
-        <a class="fitted item" #href="Brands">Brands</a>
-        <a class="fitted item" #href="Search">Search</a>
+
+
+<img class="ui centered image" src="islogo.png">
+
+<div class="ui borderless menu" id="subMenu">
+    <div class="ui container centered grid">
+        <div class="ui dropdown  item">
+            <div class="text">Men</div>
+            <i class="dropdown icon"></i>
+            <div class="menu">
+                <div class="item">TANK TOPS</div>
+                <div class="item">SHIRTS</div>
+                <div class="item">LONG SLEEVE SHIRTS</div>
+                <div class="item">SWEATSHIRTS</div>
+                <div class="item">BOARDSHORTS</div>
+                <div class="item">HATS</div>
+                <div class="item">ACCESSORIES</div>
+                <div class="item">STICKERS</div>
+            </div>
+        </div>
+        <div class="ui dropdown  item">
+            <div class="text"> Women</div>
+            <i class="dropdown icon"></i>
+            <div class="menu">
+                <div class="item">TANK TOPS</div>
+                <div class="item">SHIRTS</div>
+                <div class="item">LONG SLEEVE SHIRTS</div>
+                <div class="item">SWEATSHIRTS</div>
+                <div class="item">HATS</div>
+                <div class="item">ACCESSORIES</div>
+                <div class="item">STICKERS</div>
+            </div>
+        </div>
+        <a class=" item">Kids</a>
+        <div class="ui dropdown  item">
+            <div class="text"> Brands</div>
+            <i class="dropdown icon"></i>
+            <div class="menu">
+                <div class="item">DA MOKES</div>
+                <div class="item">FARMERS MARKET HAWAII</div>
+                <div class="item">HAWAII DOMESTIC MARKET</div>
+                <div class="item">HILIFE</div>
+                <div class="item">ISLAND SNOW HAWAII</div>
+                <div class="item">KAILUA BOYS</div>
+                <div class="item">KAILUA GIRLS</div>
+                <div class="item">KA'OHAO</div>
+                <div class="item">LANIKAI CANOE CLUB</div>
+                <div class="item">MOKULUA HULA</div>
+                <div class="item">RVCA HAWAII</div>
+                <div class="item">SRF</div>
+                <div class="item">STANCE</div>
+                <div class="item">STUSSY</div>
+                <div class="item">VOLCOM HAWAII</div>
+            </div>
+        </div>
+        <a class=" item">Search</a>
     </div>
-</div>-->
+</div>
+
+<img class="ui fluid image" src="ismiddle.png">
 
 
-<script>$('.ui.dropdown').dropdown({on:'hover'});</script>
+<script>$('.ui.dropdown').dropdown({on: 'hover'});</script>
 </body>
 </html>
