--- a/index.html
+++ b/index.html
@@ -89,7 +89,35 @@
 </div>
 
 <img class="ui fluid image" src="ismiddle.png">
-
+<div class="footer">
+    <div class="ui three column grid container">
+        <div class="column">NAVIGATION
+            <hr/>
+            <div class="ui list">
+                <div class="item">About Us</div>
+                <div class="item">Videos</div>
+                <div class="item">Locations</div>
+            </div>
+        </div>
+        <div class="column">MAIN MENU
+            <hr/>
+            <div class="ui list">
+                <div class="item">Men</div>
+                <div class="item">Women</div>
+                <div class="item">Kids</div>
+            </div>
+        </div>
+        <div class="column">CONNECT
+            <hr/>
+            <div class="ui list">
+                <div class="item">Sign up for the latest updates</div>
+                <div class="ui labeled input">
+                    <input type="text" placeholder="Enter email address"></div>
+                <div class="ui label black">Join</div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script>$('.ui.dropdown').dropdown({on: 'hover'});</script>
 </body>
